--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+
+    implementation "com.hendraanggrian.appcompat:socialview:0.2"
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation "com.hendraanggrian.appcompat:socialview-commons:0.2"
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.1.0'
